improvement(ui): dim the contrasts a bit and fix form input-groups floats

--- a/_sass/body.scss
+++ b/_sass/body.scss
@@ -7,6 +7,8 @@ body {
   @extend .ph5-ns;
   @extend .pv1;
   @extend .pv3-ns;
+  @extend .dark-gray;
+  @extend .bg-near-white;
 }
 
 a {
