--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,8 @@
 ---
 @charset "utf-8";
 
+$near-white: #fafafa;
+
 @import
   '../node_modules/tachyons-sass/scss/_normalize.scss',
   '../node_modules/tachyons-sass/scss/_box-sizing.scss',
